--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -2,21 +2,23 @@
   "name": "@web3-name-sdk/register",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsup src/index.ts --dts --clean",
+    "lint": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@siddomains/sidjs": "0.1.25",
-    "ethers": "^5.7.2"
+    "tsup": "^7.1.0"
   },
   "peerDependencies": {
     "@siddomains/sidjs": "0.1.25",
     "ethers": "^5.7.2"
   },
   "dependencies": {
-    "@siddomains/sid-contracts": "^0.1.30"
-  }
+    "@siddomains/sid-contracts": "^0.1.30",
+    "ethers": "^5.7.2"}
 }
