--- a/examples/register/package.json
+++ b/examples/register/package.json
@@ -13,6 +13,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rainbow-me/rainbowkit": "^0.11.0",
     "@siddomains/sidjs": "^0.1.25",
+    "@web3-name-sdk/register": "../../packages/register/",
     "daisyui": "^2.51.6",
     "ethers": "^5.7.2",
     "localforage": "^1.10.0",
