--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-name-sdk/register",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -14,12 +14,13 @@
     "tsup": "^7.1.0"
   },
   "peerDependencies": {
-    "@siddomains/sidjs": "0.1.26",
+    "@siddomains/sidjs": "^0.1.28",
+    "@siddomains/sid-contracts": "^0.1.31",
     "ethers": "^5.7.2"
   },
   "dependencies": {
-    "@siddomains/sidjs": "0.1.26",
-    "@siddomains/sid-contracts": "^0.1.30",
+    "@siddomains/sidjs": "^0.1.28",
+    "@siddomains/sid-contracts": "^0.1.31",
     "ethers": "^5.7.2"
   }
 }
