--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@web3-name-sdk/register",
-  "version": "0.0.1-beta",
+  "version": "0.0.1-beta.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs,iife --clean",
     "lint": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "pnpm run build"
   },
   "author": "",
   "license": "ISC",
