--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -17,11 +17,15 @@
   "peerDependencies": {
     "@siddomains/sidjs": "^0.1.28",
     "@siddomains/sid-contracts": "^0.1.31",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "@web3-name-sdk/core": "^0.1.16",
+    "viem": "^1.20"
   },
   "dependencies": {
     "@siddomains/sidjs": "^0.1.28",
     "@siddomains/sid-contracts": "^0.1.31",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "@web3-name-sdk/core": "^0.1.16",
+    "viem": "^1.20"
   }
 }
