--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1-beta.1",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs,iife --clean",
+    "build": "tsup src/index.ts --dts --format esm --clean",
     "lint": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "pnpm run build"
