--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-name-sdk/register",
-  "version": "0.0.1-beta.1",
+  "version": "0.0.6-beta.1",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
@@ -10,6 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "pnpm run build"
   },
+  "files": [
+    "dist/**"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
