--- a/examples/register/package.json
+++ b/examples/register/package.json
@@ -13,7 +13,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rainbow-me/rainbowkit": "^1.3.6",
     "@siddomains/sidjs": "^0.1.28",
-    "@web3-name-sdk/register": "file:../../packages/register",
+    "@web3-name-sdk/register": "0.0.2-beta.1",
     "daisyui": "^2.51.6",
     "ethers": "^5.7.2",
     "localforage": "^1.10.0",
