--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@injectivelabs/networks": "^1.14.6",
     "@injectivelabs/ts-types": "^1.14.6",
     "@siddomains/injective-sidjs": "0.0.2-beta",
+    "@bonfida/spl-name-service": "^2.5.1",
     "husky": "^8.0.3",
     "ts-mocha": "^10.0.0",
     "typescript": "^5.1.3"
