feat:batch get domain

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,8 @@
     "lint": "prettier --write .",
     "test": "ts-mocha -p tsconfig.json tests/**/*.spec.ts",
     "test2": "ts-mocha -p tsconfig.json tests/**/sid.spec.ts",
-    "test3": "ts-mocha -p tsconfig.json tests/**/sidV3.spec.ts"
+    "test3": "ts-mocha -p tsconfig.json tests/**/sidV3.spec.ts",
+    "testBatch": "ts-mocha -p tsconfig.json tests/**/batch.spec.ts"
   },
   "author": "SPACE ID",
   "license": "MIT",
