--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-name-sdk/core",
-  "version": "0.1.18",
+  "version": "0.2.0",
   "description": "One stop Web3 domain name resolution",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -28,11 +28,14 @@
     "tsup": "^7.1.0"
   },
   "peerDependencies": {
+    "@adraffy/ens-normalize": "^1.10.0",
+    "@ensdomains/ens-validation": "^0.1.0",
     "@bonfida/spl-name-service": "^2.5.1",
     "@sei-js/core": "^3.1.0",
     "@siddomains/injective-sidjs": "0.0.2-beta",
     "@siddomains/sei-sidjs": "^0.0.4",
-    "@solana/web3.js": "^1.75.0"
+    "@solana/web3.js": "^1.75.0",
+    "viem": "^2.15.1"
   },
   "exports": {
     ".": {
@@ -58,11 +61,6 @@
   },
   "directories": {
     "test": "tests"
-  },
-  "dependencies": {
-    "@adraffy/ens-normalize": "^1.10.0",
-    "@ensdomains/ens-validation": "^0.1.0",
-    "viem": "^1.20"
   },
   "publishConfig": {
     "access": "public"
