--- a/packages/register/package.json
+++ b/packages/register/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-name-sdk/register",
-  "version": "0.0.2-beta.1",
+  "version": "0.0.2-beta.2",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
@@ -19,17 +19,16 @@
     "tsup": "^7.1.0"
   },
   "peerDependencies": {
-    "@siddomains/sidjs": "^0.1.28",
     "@siddomains/sid-contracts": "^0.1.31",
-    "ethers": "^5.7.2",
+    "@siddomains/sidjs": "^0.1.28",
     "@web3-name-sdk/core": "^0.1.16",
-    "viem": "^1.20"
+    "ethers": "^5.7.2"
   },
   "dependencies": {
-    "@siddomains/sidjs": "^0.1.28",
     "@siddomains/sid-contracts": "^0.1.31",
-    "ethers": "^5.7.2",
+    "@siddomains/sidjs": "^0.1.28",
     "@web3-name-sdk/core": "^0.1.16",
-    "viem": "^1.20"
+    "ethers": "^5.7.2",
+    "viem": "^2.20.0"
   }
 }
