--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,8 @@
     "test": "ts-mocha -p tsconfig.json tests/**/*.spec.ts",
     "test2": "ts-mocha -p tsconfig.json tests/**/sid.spec.ts",
     "test3": "ts-mocha -p tsconfig.json tests/**/sidV3.spec.ts",
-    "testBatch": "ts-mocha -p tsconfig.json tests/**/batch.spec.ts"
+    "testBatch": "ts-mocha -p tsconfig.json tests/**/batch.spec.ts",
+    "testBnbBatch": "ts-mocha -p tsconfig.json tests/**/bnbAddressBatch.spec.ts"
   },
   "author": "SPACE ID",
   "license": "MIT",
