--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -116,6 +116,7 @@
       "src/injName.ts",
       "src/seiName.ts",
       "src/solName.ts",
+      "src/paymentIdName.ts",
       "src/utils/index.ts"
     ],
     "splitting": false,
