--- a/examples/web3name/package.json
+++ b/examples/web3name/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^1.10.9"
+    "stream-browserify": "^3.0.0",
+    "viem": "^1.10.9",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
