--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-name-sdk/core",
-  "version": "0.3.2-beta.3",
+  "version": "0.3.4",
   "description": "One stop Web3 domain name resolution",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -28,17 +28,15 @@
     "ts-node": "^10.9.1",
     "tsup": "^7.1.0"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "@adraffy/ens-normalize": "^1.10.0",
+    "@ensdomains/ens-validation": "^0.1.0",
     "@bonfida/spl-name-service": "^2.5.1",
     "@sei-js/core": "^3.1.0",
     "@siddomains/injective-sidjs": "0.0.2-beta",
     "@siddomains/sei-sidjs": "^0.0.4",
     "@solana/web3.js": "^1.75.0",
     "viem": "^2.15.1"
-  },
-  "dependencies": {
-    "@adraffy/ens-normalize": "^1.10.0",
-    "@ensdomains/ens-validation": "^0.1.0"
   },
   "exports": {
     ".": {
