--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,24 +1,24 @@
 {
   "compilerOptions": {
-    /* Language and Environment */
-    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "lib": [
-      "ESNext",
-      "DOM"
-    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-
-    /* Modules */
-    "module": "commonjs" /* Specify what module code is generated. */,
-    "resolveJsonModule": true /* Enable importing .json files. */,
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-
-    /* Type Checking */
-    "strict": true /* Enable all strict type-checking options. */,
-
-    /* Completeness */
-    // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "declaration": true,
+    "sourceMap": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@web3-name-sdk/core": ["./dist/index.d.ts"], // 生产环境
+      "@web3-name-sdk/core/*": ["./dist/*"]
+    },
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types" // 添加自定义类型目录
+    ],
+    "outDir": "dist",
+    "declarationDir": "dist/types"
   }
 }
