fix: 修复 Vercel 部署问题 - 使用本地代码替代外部依赖
- 将 @web3-name-sdk/core 源代码复制到 example 项目中
- 移除本地文件依赖，使用标准 npm 包
- 修复 TypeScript 编译错误
- 更新 tsconfig.json 支持 ES2022 特性
- 确保 Vercel 部署时不依赖 monorepo 结构

--- a/examples/four-domain/package.json
+++ b/examples/four-domain/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@web3-name-sdk/core": "file:./web3-name-sdk-core-0.4.1.tgz",
+    "@adraffy/ens-normalize": "^1.10.0",
+    "@ensdomains/ens-validation": "^0.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "react": "^18.2.0",
